# GPT2

./: .gitignore  LICENSE  README.md  download_data.py  main.py  pyproject.toml
gpt/: config.py  data.py  model.py  train.py
tests/: test_config.py  test_data.py  test_model.py
