[tool.poetry]
name = "gpt"
version = "0.1.0"
description = ""
authors = ["georgeshakan <george.shakan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.1.2"
tiktoken = "^0.5.2"
datasets = "^2.15.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
